--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,5 +1,9 @@
 {
   "hello": "Hi there",
   "i-am-tri": "I'm Minh Tris",
-  "software-engineer": "Software Engineer"
+  "software-engineer": "Software Engineer",
+  "introduction": "Introduction",
+  "detail-introduction": "Hi, I'm Minh Tri (Tris), a Frontend Developer passionate about building interactive and user-friendly web applications. I specialize in modern frontend technologies like React, Next.js, creating seamless and responsive user experiences. With a strong foundation in HTML, CSS, JavaScript, and TypeScript, I focus on writing clean, maintainable code while optimizing performance. I'm always eager to learn and explore new technologies to enhance my skills. Let’s connect and build something amazing!",
+  "contact": "Contact",
+  "tech-stack": "Tech Stack"
 }
