feat: complete carrer-section

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -6,5 +6,8 @@
   "detail-introduction": "Hi, I'm Minh Tri (Tris), a Frontend Developer passionate about building interactive and user-friendly web applications. I specialize in modern frontend technologies like React, Next.js, creating seamless and responsive user experiences. With a strong foundation in HTML, CSS, JavaScript, and TypeScript, I focus on writing clean, maintainable code while optimizing performance. I'm always eager to learn and explore new technologies to enhance my skills. Let’s connect and build something amazing!",
   "contact": "Contact",
   "tech-stack": "Tech Stack",
-  "edu-certi": "Education & Certificate"
+  "edu-certi": "Education & Certificate",
+  "now": "Now",
+  "process": "Process",
+  "projects": "Projects"
 }
