feat: add header menu

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
+  "home": "Home",
+  "about": "About",
+  "certificate": "Certificate",
   "hello": "Hi there",
   "i-am-tri": "I'm Minh Tris",
   "software-engineer": "Software Engineer",
