--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -1,4 +1,7 @@
 {
+  "home": "Trang chủ",
+  "about": "Giới thiệu",
+  "certificate": "Chứng chỉ",
   "hello": "Xin chào",
   "i-am-tri": "Tớ là Minh Trí",
   "software-engineer": "Một lập trình viên",
