feat: add 404 page

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -12,5 +12,7 @@
   "edu-certi": "Education & Certificate",
   "now": "Now",
   "process": "Process",
-  "projects": "Projects"
+  "projects": "Projects",
+  "page-not-found": "Sorry, the page you visited does not exist",
+  "back-homepage": "Back to homepage"
 }
