--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -12,5 +12,7 @@
   "edu-certi": "Học vấn & Chứng Chỉ",
   "now": "Hiện tại",
   "process": "Quá trình",
-  "projects": "Dự án"
+  "projects": "Dự án",
+  "page-not-found": "Xin lũi, trang này không có ạ",
+  "back-homepage": "Trở về trang chủ"
 }
